# cmarker.typ

./: .gitignore  Cargo.toml  README.md  README.typ  build.sh  lib.rs  lib.typ  prepare-release.sh  typst.toml
.cargo/: config.toml
.github/workflows/: ci.yml
checks/: Cargo.toml  lib.rs  signature_check.rs  version_check.rs
examples/: cheq.typ  metadata.md  metadata.typ  multi-file-1.md  multi-file-2.md  multi-file.typ  simple.typ  tests.md  tests.typ
examples/cmarker/: README.md  lib.typ  plugin.wasm
fuzz/: .gitignore  Cargo.toml  coverage.sh  main.rs
lib/: Cargo.toml  build.rs  entities.rs  farm.rs  lib.rs
lib/generate-entities/: main.rs
plugin/: Cargo.toml  entities.rs  farm.rs  lib.rs
plugin/generate-entities/: Cargo.toml  main.rs
src/: lib.rs
test-runner/: Cargo.toml  common.typ  main.rs  scaffold.typ
tests/: accepts-raw.html  accepts-raw.typ  blockquotes.html  blockquotes.md  code-block.html  code-block.md  code.html  code.md  custom-blockquote.html  custom-blockquote.typ  custom-html.html  custom-html.typ  definition-list.html  definition-list.md  disabled-features.html  disabled-features.typ  escaping.html  escaping.md  exclude.md  figure.html  figure.md  footnotes.html  footnotes.md  h1-level-html.html  h1-level-html.typ  h1-level.html  h1-level.typ  headings.html  headings.md  html.html  html.md  images.html  images.md  inline-svg.html  inline-svg.md  inline.html  inline.typ  label.html  label.typ  lines.html  (+26 more)
