[package]
name = "cmarker-typst-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
cmarker-typst = { path = "../lib" }
libfuzzer-sys = "0.4.9"
typst-syntax.workspace = true

[[bin]]
name = "fuzz"
path = "main.rs"
test = false
doc = false
bench = false
