[package]
name = "plugin"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = []

[dependencies]
cmarker-typst = { path = "../lib" }
# https://github.com/astrale-sharp/wasm-minimal-protocol/pull/35
wasm-minimal-protocol.git = "https://github.com/SabrinaJewson/wasm-minimal-protocol.rs"
wasm-minimal-protocol.rev = "992f87bfb3f912742ea85d8efd29db2452c09202"
dlmalloc = { version = "0.2.8", features = ["global"] }
memchr = { version = "2.7.4", default-features = false }
