[package]
name = "plugin"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = []

[dependencies]
cmarker-typst = { path = "../lib" }
wasm-minimal-protocol = "0.2.0"
dlmalloc = { version = "0.2.8", features = ["global"] }
memchr = { version = "2.7.4", default-features = false }
